# melange-compiler-libs

./: .depend  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  CHANGES.md  CONTRIBUTING.md  Changes  HACKING.adoc  INSTALL.adoc  Makefile  Makefile.build_config.in  Makefile.common  Makefile.config.in  Makefile.cross  Makefile.dev  README.win32.adoc  VERSION  aclocal.m4  appveyor.yml  configure  configure.ac  dune  dune-project  eio-ssl.opam  flake.nix  melange-compiler-libs.opam  ocaml-variants.opam  shell.nix
.github/workflows/: build-cross.yml  build-msvc.yml  build.yml  hygiene.yml  multicoretests.yml  test.yml  tsan.yml
api_docgen/: Ocaml_operators.mld
api_docgen/ocamldoc/: Makefile
asmcomp/: afl_instrument.ml  asmlibrarian.ml  asmlink.ml  cmm.ml  cmm.mli  cmm_helpers.ml  cmm_helpers.mli  cmm_invariants.ml  cmmgen.ml  emitaux.ml  emitaux.mli  linscan.ml  printcmm.ml  selectgen.ml  thread_sanitizer.ml  x86_proc.ml
asmcomp/amd64/: emit.mlp
asmcomp/arm64/: arch.ml  emit.mlp  selection.ml
asmcomp/power/: emit.mlp
boot/: ocamlc  ocamllex
build-aux/: ltversion.m4  ocaml_version.m4
bytecomp/: bytegen.ml  bytelink.ml
debugger/: command_line.ml  debugger_parser.mly  loadprinter.ml  loadprinter.mli  printval.ml  printval.mli
driver/: compenv.ml  main_args.ml  main_args.mli  makedepend.ml  pparse.ml
file_formats/: cmi_format.ml  cmi_format.mli  cmt_format.ml
lambda/: lambda.ml  lambda.mli  matching.ml  matching.mli  printlambda.ml  printlambda.mli  simplif.ml  switch.ml  switch.mli  tmc.ml  translclass.ml  translcore.ml  translcore.mli  translmod.ml  translmod.mli  translobj.ml  translobj.mli  translprim.ml  value_rec_compiler.ml  value_rec_compiler.mli
lib/: dune  melange_compiler_libs.ml
man/: ocamlc.1  ocamldep.1  ocamlopt.1  ocamlprof.1  ocamlrun.1
manual/: README.md
middle_end/: clambda_primitives.ml  clambda_primitives.mli  compilenv.ml  compilenv.mli  convert_primitives.ml  internal_variable_names.ml  printclambda_primitives.ml  semantics_of_primitives.ml
nix/: default.nix  overlay.nix  shell.nix  sources.nix
ocamldoc/: odoc_args.ml  odoc_ast.ml  odoc_env.ml  odoc_html.ml  odoc_html.mli  odoc_latex.ml  odoc_latex.mli  odoc_lexer.mll  odoc_misc.ml  odoc_sig.ml  odoc_str.ml  odoc_value.ml
ocamltest/: OCAMLTEST.org  builtin_actions.ml  environments.ml  filecompare.ml  main.ml  ocaml_actions.ml  ocaml_tests.ml  ocamltest_config.ml.in  ocamltest_config.mli  ocamltest_unix_dummy.ml  options.ml  run_command.ml  run_stubs.c  run_win32.c  tsl_lexer.mll
parsing/: HACKING.adoc  ast_helper.ml  ast_helper.mli  ast_invariants.ml  ast_iterator.ml  ast_mapper.ml  builtin_attributes.ml  builtin_attributes.mli  depend.ml  lexer.mli  lexer.mll  location.ml  location.mli  longident.ml  longident.mli  parser.mly  parsetree.mli  pprintast.ml  printast.ml  rescript_cpp.ml  rescript_cpp.mli
parsing0/: dune  location.ml
release-info/: News  calendar.md  howto.md  introduction.md
runtime/: alloc.c  amd64.S  amd64nt.asm  arm64.S  array.c  bigarray.c  callback.c  codefrag.c  custom.c  debugger.c  domain.c  dynlink_nat.c  fiber.c  frame_descriptors.c  gc_ctrl.c  gc_stats.c  globroots.c  intern.c  interp.c  io.c  lf_skiplist.c  major_gc.c  memory.c  memprof.c  minor_gc.c  misc.c  obj.c  platform.c  power.S  riscv.S  runtime_events.c  s390x.S  sak.c  shared_heap.c  signals.c  skiplist.c  startup_byt.c  sys.c  tsan.c  unix.c  (+2 more)
src/: eio_ssl.ml  eio_ssl.mli
stdlib/: .depend  Makefile  StdlibModules  array.ml  array.mli  arrayLabels.mli  atomic.mli  bool.ml  buffer.mli  camlinternalLazy.ml  camlinternalLazy.mli  camlinternalOO.ml  domain.mli  dune  dynarray.ml  dynarray.mli  either.ml  either.mli  filename.ml  float.ml  float.mli  format.ml  format.mli  fun.mli  gc.ml  gc.mli  hashtbl.mli  iarray.ml  iarray.mli  iarrayLabels.mli  in_channel.ml  lazy.ml  list.ml  list.mli  listLabels.mli  moreLabels.mli  pqueue.ml  pqueue.mli  random.mli  repr.mli  (+15 more)
stdlib/dune_support/: dune
stdlib/templates/: float.template.mli  floatarraylabeled.template.mli  hashtbl.template.mli  map.template.mli  set.template.mli
testsuite/: HACKING.adoc  Makefile
tools/: check-symbol-names  check-typo  gdb.py  lldb.py  ocaml.py  ocamlcp_common.ml  ocamlprof.ml  pre-commit-githook  sync_stdlib_docs
toplevel/: genprintval.ml  topcommon.ml  topdirs.ml  topprinters.ml  topprinters.mli
typing/: ctype.ml  ctype.mli  data_types.ml  data_types.mli  datarepr.ml  datarepr.mli  env.ml  env.mli  errortrace_report.ml  gprinttyp.ml  ident.ml  ident.mli  includecore.ml  includecore.mli  includemod.ml  includemod_errorprinter.ml  oprint.ml  oprint.mli  out_type.ml  parmatch.ml  patterns.ml  patterns.mli  persistent_env.ml  persistent_env.mli  predef.ml  predef.mli  primitive.ml  primitive.mli  printpat.ml  printtyp.ml  printtyp.mli  printtyped.ml  rec_check.ml  shape_reduce.ml  stypes.ml  subst.ml  tast_iterator.ml  tast_mapper.ml  typeclass.ml  typecore.ml  (+17 more)
utils/: bs_clflags.ml  bs_clflags.mli  clflags.ml  clflags.mli  config.common.ml.in  config.fixed.ml  config.generated.ml.in  config.ml  config.mli  config.mlp  format_doc.ml  load_path.ml  misc.ml  misc.mli  profile.ml  profile.mli  warnings.ml  warnings.mli
wrapper/: dune  melange_wrapper.ml  melange_wrapper.mli
yacc/: wstr.c
(+457 files in other folders)
