(copy_files# ../file_formats/*)

(copy_files# ../lambda/*)

;; the `#` directive breaks menhir

(copy_files ../parsing/*)

(copy_files# ../typing/*)

(library
 (name melange_compiler_libs)
 (public_name melange-compiler-libs)
 (flags -w -9 -open Parsing0)
 (libraries
  menhirLib
  melange-compiler-libs.wrapper
  (re_export parsing0))
 (modules_without_implementation annot outcometree))

(ocamllex
 (modules lexer)
 (mode fallback))

(menhir
 (modules parser)
 ; flag reference:
 ; https://github.com/ocaml/ocaml/blob/f0a1be6f0/Makefile.menhir#L76-L82
 (flags
  --lalr
  --explain
  --dump
  --require-aliases
  --strict
  --table
  -lg
  1
  -la
  1
  --unused-token
  COMMENT
  --unused-token
  DOCSTRING
  --unused-token
  EOL
  --unused-token
  GREATERRBRACKET
  --fixed-exception))
