;; the `#` directive breaks menhir

(copy_files ../parsing/*)

(copy_files# ../utils/*)

(copy_files# ../file_formats/*)

(copy_files# ../lambda/*)

(copy_files# ../typing/*)

(library
 (name melange_compiler_libs)
 (public_name melange-compiler-libs)
 (flags -w -9)
 (libraries menhirLib melange-compiler-libs.wrapper)
 (modules_without_implementation annot))
